Don't move the insertion point if text didn't change in wxTextEntry.

This avoids accidentally resetting the selection if SetValue() is called again
with the same value.

Closes #13728.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72897 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775